--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
           </div>
           
           <input type="radio" name="tabs" id="tabtwo">
-          <label for="tabtwo">UI/UX</label>
+          <label for="tabtwo">UI/UX Design</label>
           <div class="tab">
             <main class='web1'>
           <aside>
             <figure>
-              <img src="https://source.unsplash.com/miKmVyq3qhE" alt="Siargao island, Philippines">
+              <img src="https://source.unsplash.com/miKmVyq3qhE" alt="AltImage">
             </figure>
           </aside>
           <article>
@@ -146,7 +146,7 @@
             <p>I designed and developed a mobile-responsive travel website collaboratively, delivering an engaging user experience</p>
             <footer>
               <figure>
-              ASD
+              <!-- ASD -->
             </figure>
             <a href="https://horizon-hoppers.vercel.app" class="buttonLink">Link Button</a>
             </footer>
@@ -155,7 +155,7 @@
         <main class='web2'>
           <aside>
             <figure>
-              <img src="https://source.unsplash.com/miKmVyq3qhE" alt="Siargao island, Philippines">
+              <img src="https://source.unsplash.com/miKmVyq3qhE" alt="AltImage">
             </figure>
           </aside>
           <article>
@@ -165,7 +165,7 @@
             <p>I collaborated on designing and developing a mobile-responsive recipe searching website, optimizing user experience and functionality</p>
             <footer>
               <figure>
-              ASD
+              <!-- ASD -->
             </figure>
             <a href="https://platepalette.vercel.app" class="buttonLink">Link Button</a>
             </footer>
@@ -175,12 +175,12 @@
           </div>
           
           <input type="radio" name="tabs" id="tabthree">
-          <label for="tabthree">2D/3D</label>
+          <label for="tabthree">2D/3D Design</label>
           <div class="tab">
             <main class='web1'>
           <aside>
             <figure>
-              <img src="https://source.unsplash.com/miKmVyq3qhE" alt="Siargao island, Philippines">
+              <img src="assets/ramen.jpg" alt="AltImage">
             </figure>
           </aside>
           <article>
@@ -190,16 +190,16 @@
             <p>I designed and developed a mobile-responsive travel website collaboratively, delivering an engaging user experience</p>
             <footer>
               <figure>
-              ASD
+              <!-- ASD -->
             </figure>
-            <a href="https://horizon-hoppers.vercel.app" class="buttonLink">Link Button</a>
+            <a href="https://horizon-hoppers.vercel.app" class="buttonLink">See More</a>
             </footer>
           </article>
         </main>
         <main class='web2'>
           <aside>
             <figure>
-              <img src="https://source.unsplash.com/miKmVyq3qhE" alt="Siargao island, Philippines">
+              <img src="assets/WoodenCabin_1.0001.png" alt="Alt Image">
             </figure>
           </aside>
           <article>
@@ -209,9 +209,9 @@
             <p>I collaborated on designing and developing a mobile-responsive recipe searching website, optimizing user experience and functionality</p>
             <footer>
               <figure>
-              ASD
+              <!-- ASD -->
             </figure>
-            <a href="https://horizon-hoppers.vercel.app" class="buttonLink">Link Button</a>
+            <a href="https://horizon-hoppers.vercel.app" class="buttonLink">See More</a>
             </footer>
           </article>
         </main>
