--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <span class="changing">3D Artist</span>
               <span class="changing">UI/UX Designer - Web Developer</span>
             </span>
-            <h6 class="description">Passionate and versatile designer with <u>3 years of experience</u> spanning across various creative disciplines. From creating realistic 3D assets for AR to crafting engaging user experiences, I thrive on translating ideas into compelling designs. Currently exploring the intersection of design and technology as a UI/UX enthusiast with UI design and coding projects. Let's connect and innovate together!</h6>
+            <h6 class="description">Experienced designer with <u>3+ years</u> across diverse creative disciplines—from crafting realistic 3D assets for AR to pursuing UI/UX design. Passionate about translating ideas into compelling designs, I'm currently exploring the intersection of design and technology. Let's connect and innovate together!
           </p>
           <div class="header-btn animated bounceIn">
             <!-- <a href="#contact"><span>Learn More</span></a> -->
