--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
             <span class="change-container">
               <span class="changing">2D Artist</span>
               <span class="changing">3D Artist</span>
-              <span class="changing">UI/UX Designer - Web Developer</span>
+              <span class="changing">UI/UX Designer </span>
+              <span class="changing">Web Developer </span>
             </span>
             <h6 class="description">Experienced designer with <u>3+ years</u> across diverse creative disciplines—from crafting realistic 3D assets for AR to pursuing UI/UX design. Passionate about translating ideas into compelling designs, I'm currently exploring the intersection of design and technology. Let's connect and innovate together!
           </p>
