Changed project description

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <header>
               <h2>Horizon Hoppers</h2>
             </header>
-            <p>I designed and developed a mobile-responsive travel website collaboratively with others, delivering an engaging user experience</p>
+            <p>I designed and developed a mobile-responsive travel website collaboratively with others, delivering an engaging user experience. This is for  a class project.</p>
             <footer>
               <figure>
               <!-- ASD -->
@@ -146,7 +146,7 @@
             <header>
               <h2>Plate Palette</h2>
             </header>
-            <p>I collaborated on designing and developing a mobile-responsive recipe searching website, optimizing user experience and functionality</p>
+            <p>I collaborated on designing and developing a mobile-responsive recipe searching website, optimizing user experience and functionality. This is for  a class project.</p>
             <footer>
               <figure>
               <!-- ASD -->
