--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <header>
               <h2>GatesNFences Redesign </h2>
             </header>
-            <p>I revamped and modernized an <a  href="#" onclick='window.open("https://www.gatesnfences.com/index.html");return false;'>outdated website</a>, bringing it up to current design standards and functionality. </p>
+            <p>I revamped and modernized an <a  href="#" onclick='window.open("https://www.gatesnfences.com/index.html");return false;'>outdated website</a> for a class project, bringing it up to current design standards and functionality. </p>
             <footer>
               <figure>
               <!-- ASD -->
@@ -191,7 +191,7 @@
             <header>
               <h2>Education Landing Page</h2>
             </header>
-            <p>I designed a landing page  for hobby online classes, tailored to enhance learning experiences.</p>
+            <p>I designed a landing page  for hobby online classes for my class project, tailored to enhance learning experiences.</p>
             <footer>
               <figure>
               <!-- ASD -->
