--- a/index.html
+++ b/index.html
@@ -162,25 +162,48 @@
           <input type="radio" name="tabs" id="tabtwo">
           <label for="tabtwo">UI/UX Design</label>
           <div class="tab">
+          
             <main class='web1'>
-          <aside>
-            <figure>
-              <img src="assets/GatesNFences.png" alt="AltImage">
-            </figure>
-          </aside>
-          <article>
-            <header>
-              <h2>GatesNFences Redesign </h2>
-            </header>
-            <p>I revamped and modernized an <a  href="#" onclick='window.open("https://www.gatesnfences.com/index.html");return false;'>outdated website</a> for a class project, bringing it up to current design standards and functionality. </p>
-            <footer>
-              <figure>
-              <!-- ASD -->
-            </figure>
-            <a class= 'buttonLink' href="#" onclick='window.open("https://www.behance.net/gallery/196163963/Redesign-Project");return false;'>See More</a>
-            </footer>
-          </article>
-        </main>
+              <aside>
+                <figure>
+                  <img src="assets/TicketO.png" alt="AltImage">
+                </figure>
+              </aside>
+              <article>
+                <header>
+                  <h2>TicketO Case Study - Bus Booking Application</h2>
+                </header>
+                <p>I conducted a UI/UX case study involving research, surveys, persona, interviews, wireframing, prototyping, and mobile app design for a class project.</p>
+                <footer>
+                  <figure>
+                  <!-- ASD -->
+                </figure>
+                <a class= 'buttonLink' href="#" onclick='window.open("https://www.behance.net/gallery/201122459/TicketO-Bus-Booking-Application-UIUX-Case-Study");return false;'>See More</a>
+                </footer>
+              </article>
+            </main>
+            <main class='web3'>
+              <aside>
+                <figure>
+                  <img src="assets/Bank.png" alt="AltImage">
+                </figure>
+              </aside>
+              <article>
+                <header>
+                  <h2>Banking Sign Up Process </h2>
+                </header>
+                <p>For a class project, I designed a UI and prototyped a bank's sign-up process, incorporating the "Know Your Customer" (KYC) procedure.</p>
+                <footer>
+                  <figure>
+                  <!-- ASD -->
+                </figure>
+                <a class= 'buttonLink' href="#" onclick='window.open("https://www.behance.net/gallery/201137359/Bank-Sign-Up-Page-Mobile");return false;'>See More</a>
+                </footer>
+              </article>
+            </main>
+
+
+
         <main class='web2'>
           <aside>
             <figure>
@@ -191,7 +214,7 @@
             <header>
               <h2>Education Landing Page</h2>
             </header>
-            <p>I designed a landing page  for hobby online classes for my class project, tailored to enhance learning experiences.</p>
+            <p>I designed a landing page  for hobby online classes for my class project, tailored to enhance learning experiences for class project.</p>
             <footer>
               <figure>
               <!-- ASD -->
