--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <header>
               <h2>Horizon Hoppers</h2>
             </header>
-            <p>I designed and developed a mobile-responsive travel website collaboratively with others, delivering an engaging user experience. This is for  a class project.</p>
+            <p class="projectFont">I designed and developed a mobile-responsive travel website collaboratively with others, delivering an engaging user experience. This is for  a class project.</p>
             <footer>
               <figure>
               <!-- ASD -->
@@ -146,7 +146,7 @@
             <header>
               <h2>Plate Palette</h2>
             </header>
-            <p>I collaborated on designing and developing a mobile-responsive recipe searching website, optimizing user experience and functionality. This is for  a class project.</p>
+            <p class="projectFont">I collaborated on designing and developing a mobile-responsive recipe searching website, optimizing user experience and functionality. This is for  a class project.</p>
             <footer>
               <figure>
               <!-- ASD -->
@@ -173,7 +173,7 @@
                 <header>
                   <h2>TicketO Case Study - Bus Booking Application</h2>
                 </header>
-                <p>I conducted a UI/UX case study involving research, surveys, persona, interviews, wireframing, prototyping, and mobile app design for a class project.</p>
+                <p class="projectFont">I conducted a UI/UX case study involving research, surveys, persona, interviews, wireframing, prototyping, and mobile app design for a class project.</p>
                 <footer>
                   <figure>
                   <!-- ASD -->
@@ -192,7 +192,7 @@
                 <header>
                   <h2>Banking Sign Up Process </h2>
                 </header>
-                <p>For a class project, I designed a UI and prototyped a bank's sign-up process, incorporating the "Know Your Customer" (KYC) procedure.</p>
+                <p class="projectFont">For a class project, I designed a UI and prototyped a bank's sign-up process.</p>
                 <footer>
                   <figure>
                   <!-- ASD -->
@@ -214,7 +214,7 @@
             <header>
               <h2>Education Landing Page</h2>
             </header>
-            <p>I designed a landing page  for hobby online classes for my class project, tailored to enhance learning experiences for class project.</p>
+            <p class="projectFont">I designed a landing page  for hobby online classes for my class project, tailored to enhance learning experiences for class project.</p>
             <footer>
               <figure>
               <!-- ASD -->
@@ -239,7 +239,7 @@
                 <header>
                   <h2>3D Art and Design</h2>
                 </header>
-                <p>I collaborated on designing and developing a mobile-responsive recipe searching website, optimizing user experience and functionality</p>
+                <p class="projectFont" >I can create low-poly and high poly 3D sculptures with realistic textures.</p>
                 <footer>
                   <figure>
                   <!-- ASD -->
@@ -258,7 +258,7 @@
             <header>
               <h2>2D Illustrations</h2>
             </header>
-            <p>I created engaging 2D illustrations for comics, backgrounds, and artwork, bringing visual stories to life with creativity and detail.</p>
+            <p class="projectFont">I created engaging 2D illustrations for comics, backgrounds, and artwork, bringing visual stories to life with creativity and detail.</p>
             <footer>
               <figure>
               <!-- ASD -->
@@ -278,7 +278,7 @@
             <header>
               <h2>2D Vector Art</h2>
             </header>
-            <p>
+            <p class="projectFont">
               I created 2D vector illustrations using Adobe Illustrator, showcasing detailed artwork.</p>
             <footer>
               <figure>
@@ -299,7 +299,7 @@
             <header>
               <h2>2D Character Art</h2>
             </header>
-            <p>
+            <p class="projectFont">
               I created captivating fantasy character illustrations for freelance projects, adding depth and imagination to the visual narratives of clients.</p>
             <footer>
               <figure>
