--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
       </a>
     </li>
     <li>
+      <a href = '#' onclick='window.open("https://www.behance.net/erickaconcepc");return false;'>
+        <span class="icon"><img src="assets/behance.svg" alt="Alt"></span>
+        <span class="text">Behance</span>
+      </a>
+    </li>
+    <li>
       <a href = '#' onclick='window.open("https://www.linkedin.com/in/erickaconcepcion/");return false;'>
         <span class="icon"><img src="assets/LinkedIn.svg" alt="Alt"></span>
         <span class="text">LinkedIn</span>
@@ -81,7 +87,7 @@
       <div class="skillcontainer">
           <div class="column">
             <img src="assets/2D-icon.svg" alt="Description of the image">
-              <h3>2D DESIGN</h3>
+              <h3 class="skillHeader">2D DESIGN</h3>
               <div class="skillDescription"> 
                 <p class='skill1'>Expert in 2D illustration, vectors, and graphic design, adept at creating captivating visual content.</p>
               <h5>Adobe Photoshop, Adobe Illustrator </h5> 
@@ -90,14 +96,14 @@
           </div>
           <div class="column">
             <img src="assets/3D-icon.svg" alt="Description of the image">
-              <h3>3D DESIGN</h3>
+              <h3 class="skillHeader">3D DESIGN</h3>
               <div class="skillDescription"> 
                 <p class='skill1'>Skilled in 3D design, specializing in creating lifelike and simplified (low poly) digital models of products </p>  <h5>Maya, Zbrush, Substance Painter </h5> 
               </div>
           </div>
           <div class="column">
             <img src="assets/web-icon.svg" alt="Description of the image">
-              <h3>UI-UX/DEVELOPMENT</h3>
+              <h3 class="skillHeader">UI&UX Design</h3>
               <div class="skillDescription"> 
                 <p class='skill1'>Passionate about coding and UI/UX design, actively honing skills through personal projects</p>  <h5>Html, CSS, Javascript, React, Figma </h5> 
               </div>
@@ -171,7 +177,7 @@
               </aside>
               <article>
                 <header>
-                  <h2>TicketO Case Study - Bus Booking Application</h2>
+                  <h2>TicketO Case Study</h2>
                 </header>
                 <p class="projectFont">I conducted a UI/UX case study involving research, surveys, persona, interviews, wireframing, prototyping, and mobile app design for a class project.</p>
                 <footer>
@@ -319,19 +325,19 @@
           <div class="secondintro-content">
               
               <div class="card">
-                  <h3 class=> 2022 - Present </h3>
-                  <h2 class=> 3D Artist at <strong>Amazon </strong> </h2>
+                  <h3 > 2022 - Present </h3>
+                  <h2 >3D Artist at Amazon</h2>
                  <h4> Experienced 3D artist specializing in creating photorealistic product assets for Amazon. Specializes in tailoring work for augmented reality (AR) applications to enhance customer engagement and product visualization. Proficient in producing high-quality 3D assets optimized for Amazon products.</h4>
               </div>
               <div class="card">
-                  <h3 class=> 2021 - 2022 </h3>
-                  <h2 class=> Webtoon Editor at <strong>Iyuno-SDI </strong> </h2>
+                  <h3 > 2021 - 2022 </h3>
+                  <h2 > Webtoon Editor at Iyuno-SDI </h2>
                  <h4> 
                   Employed as a 2D Webtoon Editor at Iyuno-SDI, specializing in designing and editing content for localization across diverse regions to ensure cultural relevance and optimal publication. Managed multiple titles and collaborated with diverse teams to deliver engaging and culturally appropriate webtoon experiences.</h4>
               </div>
               <div class="card">
-                  <h3 class=> 2020 - 2021 </h3>
-                  <h2 class=> Freelance 2D Artist </h2>
+                  <h3 > 2020 - 2021 </h3>
+                  <h2 > Freelance 2D Artist </h2>
                  <h4> Previously worked as a Freelance 2D artist, creating backgrounds, comics, illustrations, vector art, and characters for individual clients and indie developers. Specialized in delivering diverse visual assets tailored to specific project needs. Experienced in collaborating remotely to bring artistic visions to life in various creative projects.</h4>
               </div>
           </div>
