edited picture error

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <main class='web4'>
           <aside>
             <figure>
-              <img src="assets/realestate.png" alt="AltImage">
+              <img src="assets/realestate.PNG" alt="AltImage">
             </figure>
           </aside>
           <article>
