--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
           <!-- <h6>Digital Designer</h6> -->
           <p class="tagline">
             <span class="change-container">
-              <span class="changing">Visual Designer - 3D&2D, Print, Decks</span>
+              <span class="changing">Marketing - 3D&2D, Print, Decks</span>
               <span class="changing">Digital Design - UI/UX Design, Email </span>
             </span>
-            <h6 class="description"> Experienced designer with over <u>4 years</u> specializing in Digital Design (UI/UX for web & mobile, 3D) and Marketing Collaterals (email design, slide decks, print, social media design). Passionate about user-centered, visually engaging designs that communicate effectively. Let's connect!
+            <h6 class="description"> Experienced designer with over <u>4 years</u> of expertise specializing in Digital Design (UI/UX for web & mobile, 3D) and Marketing Collaterals (email design, slide decks, print, social media design). Passionate about user-centered, visually engaging designs that communicate effectively. Let's connect!
           </p>
           <div class="header-btn animated bounceIn">
             <!-- <a href="#contact"><span>Learn More</span></a> -->
@@ -86,7 +86,7 @@
       <div class="skillcontainer">
           <div class="column">
             <img src="assets/2D-icon.svg" alt="Description of the image">
-              <h3 class="skillHeader">Visual Design <br>(3D&2D, Print, Decks)</h3>
+              <h3 class="skillHeader">Marketing Materials <br>(3D&2D, Print, Decks)</h3>
               <div class="skillDescription"> 
                 <p class='skill1'> I create visual experiences across 3D design, 2D Vector, print design, and presentation formats.</p>
               <h5>Adobe Photoshop, Adobe Illustrator, Adobe Indesign, Powerpoint,Maya
@@ -201,26 +201,7 @@
               </article>
             </main>
 
-        <!-- <main class='web2'>
-          <aside>
-            <figure>
-              <img src="assets/web2.png">
-            </figure>
-          </aside>
-          <article>
-            <header>
-              <h2>Plate Palette</h2>
-            </header>
-            <p class="projectFont">I collaborated on designing and developing a mobile-responsive recipe searching website, optimizing user experience and functionality. This is for my personal project.</p>
-            <footer>
-              <figure>
-              <!-- ASD -->
-            </figure>
-            <a class= 'buttonLink' href="#" onclick='window.open("https://platepalette.vercel.app");return false;'>See More</a>
-           
-            </footer>
-          </article>
-        </main> -->
+  
             
           </div>
           <!-- TAB TWO SOCIAL MEDIA-->
