--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <span class="changing">Marketing - 3D&2D, Print, Decks</span>
               <span class="changing">Digital Design - UI/UX Design, Email </span>
             </span>
-            <h6 class="description"> Experienced designer with over <u>4 years</u> of expertise specializing in Digital Design (UI/UX for web & mobile, 3D) and Marketing Collaterals (email design, slide decks, print, social media design). Passionate about user-centered, visually engaging designs that communicate effectively. Let's connect!
+            <h6 class="description"> Digital designer with over <u>4 years</u> specializing in Digital Design (UI/UX for web & mobile, 3D) and Marketing Collaterals (email design, slide decks, print, social media design). Skilled in creating user-centered, visually engaging designs for effective communication. Let's connect! 
           </p>
           <div class="header-btn animated bounceIn">
             <!-- <a href="#contact"><span>Learn More</span></a> -->
